Remove footer and change greeting message
Removed footer and updated greeting title.

--- a/index.html
+++ b/index.html
@@ -113,12 +113,7 @@
       padding:10px 14px;
     }
 
-    footer{
-      margin-top:18px;
-      color:rgba(255,255,255,0.6);
-      font-size:13px;
-    }
-
+    
     /* Decorative snowflakes (pure CSS) */
     .snowflake{
       position:absolute;
@@ -185,7 +180,7 @@
     <header>
       <div class="avatar" aria-hidden="true">DP</div>
       <div>
-        <h1 id="greetingTitle">Merry Christmas, Dinesh Potnuru!</h1>
+        <h1 id="greetingTitle">Merry Christmas, Cyber Guardian!</h1>
         <p class="lead">Warm wishes for a joyful Christmas and a bright Happy New Year.</p>
       </div>
     </header>
@@ -202,9 +197,6 @@
       </div>
     </section>
 
-    <footer>
-      Tip: click "Celebrate" to see a simple confetti effect. If you prefer no motion, your system's reduced-motion setting will be respected.
-    </footer>
   </main>
 
   <script>
