Revise avatar text and update message content
Updated the avatar text and changed the holiday message to a cybersecurity-themed reminder.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </div>
 
     <header>
-      <div class="avatar" aria-hidden="true">DP</div>
+      <div class="avatar" aria-hidden="true">Deloitte</div>
       <div>
         <h1 id="greetingTitle">Merry Christmas, Cyber Guardian!</h1>
         <p class="lead">Warm wishes for a joyful Christmas and a bright Happy New Year.</p>
@@ -187,8 +187,12 @@
 
     <section class="message" aria-label="Personal message">
       <div class="text" id="messageText">
-        May your holidays be filled with peace, laughter, and time with people you love.
-        Here's to new opportunities, good health, and happiness in the coming year!
+        Congratulations! You just scanned a random QR code.
+        As a cybersecurity professional, you of all people know that curiosity is the number-one vulnerability.
+        Don’t worry—you’re not hacked (this time), but consider this a friendly reminder that attackers love  
+        QR codes almost as much as coffee-powered security teams. Stay paranoid, stay safe… and maybe think 
+        twice before the next scan.”
+
       </div>
 
       <div class="cta" role="group" aria-label="Actions">
