Change avatar background and font size in CSS

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
       width:88px;
       height:88px;
       border-radius:14px;
-      background:linear-gradient(135deg,#ffd6a5,#ff7eb6);
+      background:linear-gradient(135deg, #ffd6a5, #4CAF50);
       display:flex;
       align-items:center;
       justify-content:center;
       font-weight:700;
       color:#102a43;
-      font-size:28px;
+      font-size:25px;
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
       flex-shrink:0;
     }
